--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor = "#FF8C42"
-backgroundColor = "#1a1410"
+backgroundColor = "#A0826D"
 secondaryBackgroundColor = "#A0826D"
 textColor = "#F5E6D3"
 font = "sans serif"
