--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,8 +1,8 @@
 [theme]
-primaryColor = "#FF8C42"
-backgroundColor = "#A0826D"
-secondaryBackgroundColor = "#A0826D"
-textColor = "#F5E6D3"
+primaryColor = "#FFFFFF"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F8F9FA"
+textColor = "#2C3E50"
 font = "sans serif"
 
 [client]
